--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "@heroicons/react": "^2.2.0",
     "@heroicons/vue": "^2.2.0",
     "@iconify/icons-heroicons-solid": "^1.2.6",
-    "@react-icons/all-files": "^4.1.0",
     "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/vite": "^4.1.18",
     "code": "^5.2.4",
     "heroicons-react": "^1.4.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.12.0",
     "redux": "^5.0.1",
@@ -40,6 +40,7 @@
     "globals": "^16.5.0",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
+    "prettier": "3.8.1",
     "tailwindcss": "^4.1.18",
     "vite": "^7.2.4"
   }
